# korean_tg_bot

./: .gitignore  Dockerfile  calculator.py  config.json  config.py  dao.py  db.py  docker-compose.yml  html.json  main.py  models.py  parser.py  pyproject.toml  requirements.txt  run.py  utils.py  validator.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 45cce5ec9e17_add_username.py  a327f9ad89ed_change_telegram_id_to_biginteger.py  d599a5fc6faf_initial_migration.py  d96564765a43_add_users.py
telegram/: handlers.py  keyboards.py  states.py
telegram/templates/: help_command.py  price_answer.py
