[tool.poetry]
name = "tg-bot-korea"
version = "0.1.0"
description = ""
authors = ["AnisimoffA <happyprooo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datetime = "^5.5"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
aiogram = "^3.17.0"
python-dotenv = "^1.0.1"
colorlog = "^6.9.0"
aiohttp = "^3.11.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
